# project_task_1

./: .gitignore  Dockerfile  README.md  __main__.py  ddl.sql  ddl_pg.sql  docker-compose.yml  main.py  pyproject.toml
src/app/: crud.py  models.py  schemas.py  views.py
src/config/: settings.py
src/utils/: database.py  parser.py
tests/: conftest.py  test_all.py
