[tool.poetry]
name = "project-task-1"
version = "0.1.0"
description = "test_task_rootcode"
authors = ["Artem <vebulogmetra@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"
pandas = "^2.1.4"
sqlalchemy = "^2.0.23"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
isort = "^5.13.1"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 90
force_grid_wrap = 2

[tool.black]
line-length = 90
target-version = ['py310']

[tool.flake8]
exclude = [".git", ".pytest_cache", "tests", "__pycache__", "env", "venv", ".venv"]
max-line-length = 90
max-complexity = 8
ignore = ["W503"]

